// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dmqHEX fCqQYS"
>
  <div
    class="sc-eDDNvR cmRiaz"
  >
    <span
      class="sc-jTrPJq"
    >
      0
    </span>
    <span
      class="sc-gLDzan cSvIyf"
    >
      42
    </span>
  </div>
  <button
    class="sc-beqWaB sc-gueYoa cKyvAn ehhCNn"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dmqHEX fCqQYS"
>
  <div
    class="sc-hLseeU iqLccQ"
  >
    🛌🛌
  </div>
  <button
    class="sc-beqWaB sc-gueYoa hqkyfE ehhCNn"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dmqHEX fCqQYS"
>
  <div
    class="sc-hLseeU iqLccQ"
  >
    🍅
  </div>
  <button
    class="sc-beqWaB sc-gueYoa hqkyfE ehhCNn"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dmqHEX fCqQYS"
>
  <div
    class="sc-hLseeU iqLccQ"
  >
    🛌
  </div>
  <button
    class="sc-beqWaB sc-gueYoa hqkyfE ehhCNn"
  >
    Start
  </button>
</div>
`;
